# chains-sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml
benches/: security_bench.rs  signing_bench.rs
examples/: ethereum_signing.rs  multi_chain.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_bitcoin.rs  fuzz_bls.rs  fuzz_ed25519.rs  fuzz_ethereum.rs  fuzz_from_wif.rs  fuzz_from_xprv.rs  fuzz_mnemonic_from_phrase.rs  fuzz_psbt_deserialize.rs
src/: atomic_swap.rs  bip85.rs  crypto.rs  encoding.rs  error.rs  hd_key.rs  hex_bytes.rs  lib.rs  mnemonic.rs  security.rs  serde_zeroizing.rs  traits.rs
src/bitcoin/: descriptor.rs  helpers.rs  lightning.rs  message.rs  miniscript.rs  mod.rs  multisig.rs  musig2_tx.rs  ordinals.rs  schnorr.rs  scripts.rs  sighash.rs  silent_payments.rs  taproot.rs  tapscript.rs  transaction.rs
src/bls/: eip2333.rs  keystore.rs  mod.rs  threshold.rs
src/ethereum/: abi.rs  eips.rs  keystore.rs  mod.rs  permit2.rs  proxy.rs  rlp.rs  safe.rs  siwe.rs  smart_wallet.rs  transaction.rs  uniswap_v4.rs  userop.rs
src/frost/: signing.rs
src/neo/: mod.rs  transaction.rs  witness.rs
src/solana/: dex.rs  governance.rs  jupiter_dca.rs  metaplex.rs  mod.rs  programs.rs  staking.rs  token_extensions.rs  transaction.rs
src/xrp/: advanced.rs  mod.rs  transaction.rs
tests/: address_tests.rs  fuzz_tests.rs  integration.rs  property_tests.proptest-regressions  property_tests.rs  sdk_features_tests.rs  sdk_serde.rs  serde_tests.rs  threshold_tests.rs
(+15 files in other folders)
